<resources xmlns:http="http://schemas.android.com/tools">
    <string name="app_name">NotePal</string>
    <string name="desc">A simple yet elegant Material Design note-taking experience for Android</string>
    <string name="dev">Developer</string>
    <string name="dev_desc">Samriddha Basu</string>
    <string name="dev_email">samriddhabasu@gmail.com</string>
    <string name="play_store">Play Store</string>
    <string name="website">Website</string>
    <string name="gplus">Google+</string>
    <string name="github">GitHub</string>
    <string name="package_name">Package name:\u0020</string>
    <string name="version_name">Version:\u0020</string>
    <string name="version_code">Version code:\u0020</string>
    <string name="android_version">Android Version:\u0020</string>
    <string name="device">Device:\u0020</string>

    <string name="license_info">Copyright notice for the app and attributions for 3rd party libraries used</string>
    <string name="provider_desc">Content Provider for NotePal</string>
    <string name="copyright_notice">Copyright Notice</string>
    <string name="copyright" translatable="false">
    Copyright © 2016-2017  Samriddha Basu
        \n\nThe source code for this app is available under the following terms:
        \n\nYou may view, modify, use and distribute this code and any derived works, subject to the conditions
\n- You must give appropriate credit, retain all copyright notices, provide a link to the original work and license (if possible), and indicate if changes were made
\n- You may not use the material for commercial purposes without the explicit permission of the original author
\n- The original author will not be held liable for any misuse, or direct or indirect harm caused to any person(s).</string>
    <string name="license_icon">App icon is from Moonshine Icon Pack by Pedro Peguero Jr. available under Creative Commons Attribution 4.0 International (CC BY 4.0) license</string>

    <string name="blank">No notes or checklists saved\n Add one by tapping the floating button below</string>
    <string name="blank_notes">No notes saved\n Add one by tapping the floating button below</string>
    <string name="blank_checklists">No checklists saved\n Add one by tapping the floating button below</string>
    <string name="blank_archive">No notes archived</string>
    <string name="blank_trash">Notes you delete will show up here</string>

    <string name="title">Title</string>
    <string name="subtitle">Short description (optional)</string>
    <string name="description">Description</string>
    <string name="content">Start typing…</string>
    <string name="updated">Updated:\ </string>
    <string name="incomplete">Please enter some content</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="create_note">Create new note</string>
    <string name="new_note">New note</string>
    <string name="new_checklist">New checklist</string>
    <string name="tap_create_note">Tap to create a new note in NotePal</string>
    <string name="delete">Delete</string>
    <string name="confirm_delete">Are you sure you want to delete all notes? This action cannot be undone!</string>
    <string name="confirm_clear_notifications">Are you sure you want to clear all notifications?</string>
    <string name="close">Close</string>
    <string name="discard">Discard</string>
    <string name="confirm_discard">Discard changes?</string>
    <string name="note">Note</string>
    <string name="notes">Notes</string>
    <string name="archive">Archive</string>
    <string name="added_archive">Added to archive</string>
    <string name="removed_archive">Removed from archive</string>
    <string name="archive_hint">Editing will unarchive this note</string>
    <string name="refresh">Refresh</string>
    <string name="edit">Edit</string>
    <string name="error">Error</string>
    <string name="search">Search</string>
    <string name="search_hint">Search notes and lists</string>
    <string name="search_archive">Search archived notes</string>
    <string name="search_notes">Search your notes</string>
    <string name="search_checklists">Search your checklists</string>
    <string name="search_no_results">No results found :(</string>
    <string name="search_no_results_archive">No results found in archive :(</string>
    <string name="back_press">Press back again to discard changes</string>
    <string name="trash">Trash</string>

    <string name="app_settings">App Settings</string>
    <string name="light_theme">Use light theme</string>
    <string name="light_theme_sub">Throughout the app</string>
    <string name="restored">Restore complete</string>
    <string name="backup_and_reset">Backup and reset</string>
    <string name="backup_to_drive">Backup to Google Drive</string>
    <string name="drive_error">Error connecting to Drive</string>
    <string name="backup_drive_sub">Save your current notes to the cloud</string>
    <string name="backing_up">Backing up…</string>
    <string name="error_backup">Failed to backup to Drive</string>
    <string name="backup_success">Backup successful!</string>
    <string name="restore_from_drive">Restore from Google Drive</string>
    <string name="restore_drive_sub">Retrieve previously your backup from the cloud</string>
    <string name="restoring">Restoring…</string>
    <string name="error_restore">Error retrieving backups from Drive</string>
    <string name="no_backups">No backups found</string>
    <string name="local_backup">Backup to internal storage</string>
    <string name="backup_local_sub">Create a local backup</string>
    <string name="local_restore">Restore from internal storage</string>
    <string name="restore_local_sub">Retrieve notes from local backup</string>
    <string name="storage_permission_rationale">Storage access permission is required to import and export local backups</string>
    <string name="choose_backup_to_restore">Choose backup to restore</string>

    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="cancel">Cancel</string>
    <string name="share">Share</string>
    <string name="notif">Create notification</string>
    <string name="notif_confirm">Create a notification?</string>
    <string name="share_via">Share via</string>
    <string name="check">\u2713</string>

    <string name="action_about">About</string>
    <string name="action_settings">Settings</string>

    <string name="source">Source code</string>
    <string name="rate_app">Rate the app</string>
    <string name="share_app">Share the app</string>
    <string name="see_intro">Launch Intro</string>
    <string name="feedback">Feedback</string>
    <string name="Notices">Notices</string>
    <string name="third_party_libs">3rd Party Libraries</string>
    <string name="loading">Loading…</string>
    <string name="loading_ad">Loading ad…</string>
    <string name="add_widget">Add widget</string>
    <string name="no_items">No items to show</string>
    <string name="open_app">Open app</string>
    <string name="check_out">Check out</string>
    <string name="on_play_store">on the Play Store</string>
    <string name="link_github">https://github.com/TheDorkKnightRises</string>
    <string name="link_site_dev">https://samriddhabasu.github.io</string>
    <string name="link_play_store_app">https://play.google.com/store/apps/details?id=thedorkknightrises.notes</string>
    <string name="link_github_app">https://github.com/TheDorkKnightRises/Notes-App</string>
    <string name="link_play_store_dev">https://play.google.com/store/apps/dev?id=7533730446729607250</string>
    <string name="no_mail_app">Please install an email app</string>
    <string name="no_share_app_found">No app to share with</string>

    <string name="icon">App icon</string>
    <string name="welcome">Welcome to a new way of taking down notes</string>
    <string name="intro1">Add a note by tapping the Floating Action Button</string>
    <string name="intro2">You can archive your notes…</string>
    <string name="intro3">Share them…</string>
    <string name="intro4">Or create a notification reminder</string>
    <string name="intro5">Use the search function to quickly find a specific note</string>
    <string name="intro6">You can see this intro again from the About screen</string>
    <string name="reset">Reset all notes</string>
    <string name="reset_sub">Permanently delete all notes from local storage</string>
    <string name="columns">Layout</string>
    <string name="num_one">Single-column</string>
    <string name="num_two">Dual-column</string>
    <string name="newer">Latest first</string>
    <string name="older">Oldest first</string>
    <string name="sorting">Sort by</string>
    <string name="clear_notifications">Clear notifications</string>
    <string name="clear_notifications_sub">Remove all notifications for notes</string>
    <string name="quick_notify">Enable notification shortcut</string>
    <string name="quick_notify_sub">Show a notification to quickly create notes</string>
    <string name="test_banner_ad_unit_id">ca-app-pub-3940256099942544/6300978111</string>
    <string name="ads_enabled">Enable ads</string>
    <string name="ads_enabled_sub">Show ads to support development</string>
    <string name="no_connection">No network connection</string>
    <string name="connecting">Connecting…</string>
    <string name="reminders">Reminders</string>
    <string name="show_notification">Show as notification</string>
    <string name="set_reminder">Set reminder</string>
    <string name="invalid_time">Cannot set reminder in the past!</string>
    <string name="missed_reminder">Missed reminder</string>
    <string name="reminder_sound">Enable alert sound</string>
    <string name="reminder_sound_sub">Disable this to show silent reminders</string>
    <string name="clear_reminders">Clear all reminders</string>
    <string name="clear_reminders_sub">Turn off all reminders that have been set</string>
    <string name="reminder_vibrate">Enable vibrations</string>
    <string name="reminder_vibrate_sub">Device will vibrate when a reminder is shown</string>
    <string name="reminder_led">Enable notification LED</string>
    <string name="reminder_led_sub">Pulse the LED if the device has one</string>
    <string name="confirm_clear_reminders">Are you sure you want to clear all reminders?</string>
    <string name="dismiss">Dismiss</string>
    <string name="add_to_list">Add to list</string>
    <string name="note_added">New note added. Tap to view</string>
    <string name="view">View</string>
    <string name="back_press_checklist">Press back again to exit</string>
    <string name="save">Save</string>
    <string name="save_exit">Save and exit</string>
    <string name="share_info">Share app info</string>
    <string name="share_info_sub">When sharing notes and lists</string>
    <string name="shared_using">Shared using NotePal</string>
    <string name="home">Home</string>
    <string name="checklists">Checklists</string>
    <string name="channel_name_default">Default</string>
    <string name="channel_description_default">The default channel for miscellaneous app notifications</string>
    <string name="channel_name_notes">User-created</string>
    <string name="channel_description_notes">Notifications for notes and checklists created by user</string>
    <string name="channel_name_reminders">Reminders</string>
    <string name="channel_description_reminders">Scheduled reminders and missed reminder notifications</string>
    <string name="deleted_note_cannot_be_edited">Deleted note cannot be edited</string>
    <string name="deleted_checklist_cannot_be_edited">Deleted checklist cannot be edited</string>
    <string name="permanently_delete">Delete this item permanently? This action cannot be undone</string>
    <string name="moved_to_trash">Moved to trash</string>
</resources>
