<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group>
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/ic_home_white_24dp"
            android:title="@string/home" />
        <item
            android:id="@+id/nav_notes"
            android:icon="@drawable/ic_note_white_24dp"
            android:title="@string/notes" />
        <item
            android:id="@+id/nav_checklists"
            android:icon="@drawable/ic_list_white_24dp"
            android:title="@string/checklists" />
        <item
            android:id="@+id/nav_archive"
            android:icon="@drawable/ic_archive_white_24dp"
            android:title="@string/archive" />
        <item
            android:id="@+id/nav_trash"
            android:icon="@drawable/ic_delete_grey_24dp"
            android:title="@string/trash" />
    </group>

    <group android:id="@+id/settings_nav">
        <item
            android:id="@+id/nav_about"
            android:icon="@drawable/ic_info_white_24dp"
            android:title="@string/action_about" />
        <item
            android:id="@+id/nav_settings"
            android:icon="@drawable/ic_settings_white_24dp"
            android:title="@string/action_settings" />
    </group>

</menu>
