<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#bb333333"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="56dp"
        android:background="@color/colorPrimary">

        <TextView
            android:id="@+id/openAppButton"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:contentDescription="@string/open_app"
            android:gravity="center_vertical"
            android:paddingEnd="@dimen/activity_horizontal_margin"
            android:paddingLeft="@dimen/activity_horizontal_margin"
            android:paddingRight="@dimen/activity_horizontal_margin"
            android:paddingStart="@dimen/activity_horizontal_margin"
            android:text="@string/app_name"
            android:textAppearance="@android:style/TextAppearance.DeviceDefault.Large"
            android:textColor="@color/white" />

        <ImageButton
            android:id="@+id/refresh"
            android:layout_width="56dp"
            android:layout_height="56dp"
            android:background="?android:attr/selectableItemBackground"
            android:contentDescription="@string/refresh"
            android:src="@drawable/ic_sync_white_24dp" />


    </LinearLayout>

    <TextView
        android:id="@+id/textView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_vertical"
        android:padding="@dimen/activity_horizontal_margin"
        android:text="@string/no_items"
        android:textAllCaps="true"
        android:textColor="#ccc"
        android:textStyle="bold" />

    <ListView
        android:id="@+id/list_view"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:clipToPadding="false" />

</LinearLayout>