<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/rootview"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    tools:context=".ui.activities.AboutActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <android.support.design.widget.AppBarLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:theme="@style/AppTheme.AppBarOverlay">

            <android.support.v7.widget.Toolbar
                android:id="@+id/toolbar"
                android:layout_width="match_parent"
                android:layout_height="?attr/actionBarSize"
                android:background="?attr/colorPrimary"
                app:popupTheme="@style/AppTheme.PopupOverlay"
                app:theme="@style/AppTheme.AppBarOverlay" />

        </android.support.design.widget.AppBarLayout>

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <android.support.v7.widget.CardView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="8dp"
                    android:clickable="true"
                    android:foreground="?android:attr/selectableItemBackground"
                    app:cardElevation="4dp">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="vertical">

                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:padding="8dp">

                            <ImageView
                                android:layout_width="64dp"
                                android:layout_height="64dp"
                                android:layout_gravity="center"
                                android:layout_margin="8dp"
                                android:contentDescription="@string/icon"
                                android:src="@drawable/ic_launcher" />

                            <LinearLayout
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:layout_gravity="center_vertical"
                                android:orientation="vertical">

                                <TextView
                                    android:layout_width="match_parent"
                                    android:layout_height="wrap_content"
                                    android:padding="8dp"
                                    android:text="@string/app_name"
                                    android:textAppearance="@style/TextAppearance.AppCompat.Title" />

                                <TextView
                                    android:layout_width="match_parent"
                                    android:layout_height="wrap_content"
                                    android:padding="8dp"
                                    android:text="@string/desc"
                                    android:textAppearance="@style/TextAppearance.AppCompat.Subhead" />
                            </LinearLayout>
                        </LinearLayout>

                        <TextView
                            android:id="@+id/versionText"
                            style="@style/ButtonTextView"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:drawableLeft="@drawable/ic_info_outline_accent_24dp"
                            android:drawablePadding="8dp"
                            android:drawableStart="@drawable/ic_info_outline_accent_24dp"
                            android:gravity="start|center_vertical"
                            android:minHeight="56dp"
                            android:text="@string/version"
                            android:textAlignment="textStart" />

                        <TextView
                            style="@style/ButtonTextView"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:drawableLeft="@drawable/ic_launch_accent_24dp"
                            android:drawablePadding="8dp"
                            android:drawableStart="@drawable/ic_launch_accent_24dp"
                            android:gravity="start|center_vertical"
                            android:minHeight="56dp"
                            android:onClick="showIntro"
                            android:text="@string/see_intro"
                            android:textAlignment="textStart" />

                        <TextView
                            style="@style/ButtonTextView"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:drawableLeft="@drawable/ic_share_accent_24dp"
                            android:drawablePadding="8dp"
                            android:drawableStart="@drawable/ic_share_accent_24dp"
                            android:gravity="start|center_vertical"
                            android:minHeight="56dp"
                            android:onClick="shareApp"
                            android:text="@string/share_app"
                            android:textAlignment="textStart" />

                        <TextView
                            style="@style/ButtonTextView"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:drawableLeft="@drawable/ic_star_border_accent_24dp"
                            android:drawablePadding="8dp"
                            android:drawableStart="@drawable/ic_star_border_accent_24dp"
                            android:gravity="start|center_vertical"
                            android:minHeight="56dp"
                            android:onClick="onLinkClick"
                            android:text="@string/rate_app"
                            android:textAlignment="textStart" />
                    </LinearLayout>
                </android.support.v7.widget.CardView>

                <android.support.v7.widget.CardView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="8dp"
                    android:clickable="true"
                    android:foreground="?android:attr/selectableItemBackground"
                    app:cardElevation="4dp">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="vertical">

                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:padding="16dp"
                            android:text="@string/dev"
                            android:textAppearance="@style/TextAppearance.AppCompat.Title" />

                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:orientation="horizontal"
                            android:paddingLeft="8dp"
                            android:paddingRight="8dp">

                            <de.hdodenhof.circleimageview.CircleImageView
                                android:layout_width="64dp"
                                android:layout_height="64dp"
                                android:layout_margin="8dp"
                                android:src="@drawable/profile" />

                            <TextView
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:layout_gravity="center"
                                android:gravity="center_vertical"
                                android:minHeight="64dp"
                                android:padding="16dp"
                                android:text="@string/dev_desc"
                                android:textAppearance="@style/TextAppearance.AppCompat.Subhead"
                                android:textSize="18sp" />
                        </LinearLayout>

                        <TextView
                            style="@style/ButtonTextView"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:drawableLeft="@drawable/ic_mail_outline_accent_24dp"
                            android:drawablePadding="8dp"
                            android:drawableStart="@drawable/ic_mail_outline_accent_24dp"
                            android:gravity="start|center_vertical"
                            android:minHeight="56dp"
                            android:onClick="feedback"
                            android:text="@string/feedback"
                            android:textAlignment="textStart" />

                        <TextView
                            style="@style/ButtonTextView"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:drawableLeft="@drawable/ic_google_play_accent_24dp"
                            android:drawablePadding="8dp"
                            android:drawableStart="@drawable/ic_google_play_accent_24dp"
                            android:gravity="start|center_vertical"
                            android:minHeight="56dp"
                            android:onClick="onLinkClick"
                            android:text="@string/play_store"
                            android:textAlignment="textStart" />

                        <TextView
                            style="@style/ButtonTextView"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:drawableLeft="@drawable/ic_repository_accent_24dp"
                            android:drawablePadding="8dp"
                            android:drawableStart="@drawable/ic_repository_accent_24dp"
                            android:gravity="start|center_vertical"
                            android:minHeight="56dp"
                            android:onClick="onLinkClick"
                            android:text="@string/github"
                            android:textAlignment="textStart" />

                        <TextView
                            style="@style/ButtonTextView"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:drawableLeft="@drawable/ic_web_accent_24dp"
                            android:drawablePadding="8dp"
                            android:drawableStart="@drawable/ic_web_accent_24dp"
                            android:gravity="start|center_vertical"
                            android:minHeight="56dp"
                            android:onClick="onLinkClick"
                            android:text="@string/website"
                            android:textAlignment="textStart" />


                    </LinearLayout>
                </android.support.v7.widget.CardView>

                <android.support.v7.widget.CardView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="8dp"
                    android:clickable="true"
                    android:foreground="?android:attr/selectableItemBackground"
                    app:cardElevation="4dp">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="vertical">

                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:padding="16dp"
                            android:text="@string/Notices"
                            android:textAppearance="@style/TextAppearance.AppCompat.Title" />

                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:orientation="vertical">

                            <TextView
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:paddingBottom="8dp"
                                android:paddingLeft="16dp"
                                android:paddingRight="16dp"
                                android:text="@string/license_info"
                                android:textAppearance="@style/TextAppearance.AppCompat.Subhead" />

                            <TextView
                                android:id="@+id/copyright"
                                style="@style/ButtonTextView"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:drawableLeft="@drawable/ic_copyright_accent_24dp"
                                android:drawablePadding="8dp"
                                android:drawableStart="@drawable/ic_copyright_accent_24dp"
                                android:gravity="start|center_vertical"
                                android:minHeight="56dp"
                                android:onClick="onNoticeClick"
                                android:text="@string/copyright_notice"
                                android:textAlignment="textStart" />

                            <TextView
                                android:id="@+id/legal"
                                style="@style/ButtonTextView"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:drawableLeft="@drawable/ic_book_accent_24dp"
                                android:drawablePadding="8dp"
                                android:drawableStart="@drawable/ic_book_accent_24dp"
                                android:gravity="start|center_vertical"
                                android:minHeight="56dp"
                                android:onClick="onNoticeClick"
                                android:text="@string/third_party_libs"
                                android:textAlignment="textStart" />

                        </LinearLayout>
                    </LinearLayout>
                </android.support.v7.widget.CardView>
            </LinearLayout>
        </ScrollView>
    </LinearLayout>
</android.support.design.widget.CoordinatorLayout>